Fixed footers on mobile

--- a/consultant.html
+++ b/consultant.html
@@ -40,6 +40,9 @@
             background-color: var(--color-bg);
             line-height: 1.65;
             font-size: 16px;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
         .container {
@@ -646,6 +649,7 @@
             text-align: center;
             padding: 2rem 24px;
             font-size: 0.875rem;
+            margin-top: auto;
         }
     </style>
 </head>
