--- a/example.html
+++ b/example.html
@@ -41,6 +41,9 @@
             background-color: var(--color-bg);
             line-height: 1.7;
             font-size: 16px;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
         .container {
@@ -926,6 +929,7 @@
             background: var(--color-dark);
             color: var(--color-white);
             padding: 60px 0 30px;
+            margin-top: auto;
         }
 
         .footer-content {
