--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             background-color: var(--color-bg);
             line-height: 1.7;
             font-size: 16px;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
         /* Container */
@@ -741,6 +744,7 @@
             text-align: center;
             padding: 40px 24px;
             font-size: 0.9rem;
+            margin-top: auto;
         }
 
         /* ==================== ANIMATIONS ==================== */
