--- a/gym.html
+++ b/gym.html
@@ -40,6 +40,9 @@
             background-color: var(--color-bg);
             line-height: 1.7;
             font-size: 16px;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
         .container {
@@ -524,6 +527,7 @@
             color: rgba(255,255,255,0.6);
             text-align: center;
             padding: 40px 24px;
+            margin-top: auto;
         }
     </style>
 </head>
