Fixed contact form

--- a/index.html
+++ b/index.html
@@ -737,6 +737,30 @@
             font-size: 1.1rem;
         }
 
+        .contact-form .hidden {
+            position: absolute;
+            left: -9999px;
+            width: 1px;
+            height: 1px;
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .form-success-message {
+            display: none;
+            background: rgba(16, 185, 129, 0.2);
+            border: 1px solid rgba(16, 185, 129, 0.6);
+            color: #6ee7b7;
+            padding: 1rem 1.25rem;
+            border-radius: 12px;
+            margin-bottom: 1.5rem;
+            font-weight: 500;
+        }
+
+        .form-success-message.visible {
+            display: block;
+        }
+
         /* ==================== FOOTER ==================== */
         footer {
             background: #1a202c;
@@ -1012,9 +1036,16 @@
                 </div>
                 
                 <div class="contact-grid">
-                    <!-- Contact Form -->
+                    <!-- Contact Form (Netlify Forms - free tier) -->
                     <div class="contact-form">
-                        <form action="#" method="POST" id="contactForm">
+                        <div id="formSuccessMessage" class="form-success-message" role="alert">
+                            Благодаря за съобщението! Ще се свържа с вас до 24 часа.
+                        </div>
+                        <form name="contact" method="POST" id="contactForm" data-netlify="true" data-netlify-honeypot="bot-field" action="/#contact">
+                            <input type="hidden" name="form-name" value="contact">
+                            <p class="hidden" aria-hidden="true">
+                                <label>Не попълвайте: <input name="bot-field"></label>
+                            </p>
                             <div class="form-group">
                                 <label for="name">Вашето име</label>
                                 <input type="text" id="name" name="name" placeholder="Напр. Мария Иванова" required>
@@ -1044,6 +1075,18 @@
                                 <h4>Имейл</h4>
                                 <p><a href="mailto:stIvailo05@gmail.com">stIvailo05@gmail.com</a></p>
                                 <p style="font-size: 0.9rem; margin-top: 4px;">Отговарям до 24 часа</p>
+                            </div>
+                        </div>
+                        <div class="contact-info-item">
+                            <div class="contact-info-icon">
+                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
+                                </svg>
+                            </div>
+                            <div class="contact-info-text">
+                                <h4>Телефон</h4>
+                                <p><a href="tel:+359887985677">+359 887 985 677</a></p>
+                                <p style="font-size: 0.9rem; margin-top: 4px;">Обадете се или пишете</p>
                             </div>
                         </div>
                         <div class="contact-info-item">
@@ -1092,12 +1135,14 @@
             });
         });
 
-        // Simple form handling
-        document.getElementById('contactForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            alert('Благодаря за съобщението! Ще се свържа с вас скоро.');
-            this.reset();
-        });
+        // Show thank-you message if Netlify redirects back with ?submitted=1
+        (function() {
+            var params = new URLSearchParams(window.location.search);
+            if (params.get('submitted') === '1') {
+                var msg = document.getElementById('formSuccessMessage');
+                if (msg) msg.classList.add('visible');
+            }
+        })();
     </script>
 </body>
 </html>
