Fixed contact form 2

--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
                         <div id="formSuccessMessage" class="form-success-message" role="alert">
                             Благодаря за съобщението! Ще се свържа с вас до 24 часа.
                         </div>
-                        <form name="contact" method="POST" id="contactForm" data-netlify="true" data-netlify-honeypot="bot-field" action="/#contact">
+                        <form name="contact" method="POST" id="contactForm" data-netlify="true" data-netlify-honeypot="bot-field" action="/">
                             <input type="hidden" name="form-name" value="contact">
                             <p class="hidden" aria-hidden="true">
                                 <label>Не попълвайте: <input name="bot-field"></label>
